# btcmserver

./: .gitignore  Cargo.toml  build.rs  server.toml
admin/: app-calender.html  app-profile.html  chart-chartist.html  chart-chartjs.html  chart-flot.html  chart-morris.html  chart-peity.html  chart-sparkline.html  coin-details.html  ecom-checkout.html  ecom-customers.html  ecom-invoice.html  ecom-product-detail.html  ecom-product-grid.html  ecom-product-list.html  ecom-product-order.html  email-compose.html  email-inbox.html  email-read.html  empty-page.html  form-ckeditor.html  form-element.html  form-pickers.html  form-validation.html  form-wizard.html  index-2.html  index.html  map-jqvmap.html  market-capital.html  my-wallet.html  page-error-400.html  page-error-403.html  page-error-404.html  page-error-500.html  page-error-503.html  page-lock-screen.html  page-login.html  page-register.html  portofolio.html  post-details.html  (+29 more)
admin/static/css/: animate.min.css  aos.min.css  asColorPicker.min.css  bootstrap-clockpicker.min.css  bootstrap-icons.css  bootstrap-material-datetimepicker.css  bootstrap-select.min.css  chartist.min.css  css2.css  css3.css  css4.css  css5.css  daterangepicker.css  default.css  default.date.css  dropzone.css  flaticon.css  flaticon_1.css  font-awesome.min.css  icomoon.css  jquery.dataTables.min.css  jquery.nestable.min.css  jqvmap.min.css  lightgallery.min.css  line-awesome.min.css  main.min.css  materialdesignicons.min.css  metisMenu.min.css  nice-select.css  nouislider.min.css  owl.carousel.css  perfect-scrollbar.css  select2.min.css  simple-line-icons.css  smart_wizard.min.css  star-rating-svg.css  style.css  style1.css  sweetalert2.min.css  swiper-bundle.min.css  (+2 more)
admin/static/js/: Chart.bundle.min.js  apexchart.js  bootstrap-clockpicker.min.js  bootstrap-material-datetimepicker.js  bootstrap-select.min.js  bs-daterange-picker-init.js  chartist-init.js  chartist-plugin-tooltip.min.js  chartist.min.js  chartjs-init.js  ckeditor.js  clock-picker-init.js  coin-details.js  custom.min.js  dashboard-1.js  datatables.init.js  daterangepicker.js  demo.js  deznav-init.js  deznav.min.js  dropzone.js  flot-init.js  fullcalendar-init.js  global.min.js  highlight.pack.min.js  jquery-asColor.min.js  jquery-asColorPicker.init.js  jquery-asColorPicker.min.js  jquery-asGradient.min.js  jquery.dataTables.min.js  jquery.flot.js  jquery.flot.pie.js  jquery.flot.resize.js  jquery.flot.spline.min.js  (+45 more)
src/: lib.rs
